# pdftoimage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-windows.yml  ci.yml
packaging/: installer.iss  pdftoimage.spec
src/pdftoimage/: cli.py  core.py  gui.py
tests/: conftest.py  test_cli.py  test_core.py  test_gui.py
