[project]
name = "pdftoimage"
version = "0.1.0"
description = "Convert PDF pages to image files (PNG/JPEG) from the command line"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
pdftoimage = "pdftoimage.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
